# my-python-app

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py  main.py  utils.py
tests/: test_main.py  test_utils.py
