[project]
name = "my-python-app"
version = "0.1.0"
description = "A simple Python application template."
authors = [
    {name = "Ofelia Webb",email = "ofelia.b.webb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.1.2"
mypy = "^1.15.0"

